test/error/14.c
int main(void k){
    ;
}

int test(static int e){
    ;
}
